<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_head</name>
  <version>0.0.0</version>
  <description>Central launch file on the pr2-head for all components running there.</description>
  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tams_pr2_azure_kinect</exec_depend>
  <exec_depend>tams_pr2_neopixel</exec_depend>
</package>
